re PR c++/14808 ([win32] Undefined results with virtual base classes)

PR c++/14808
	* method.c (make_alias_for_thunk): Just return function decl
	for one_only functions if __CYGWIN__ or __MINGW32__
	(use_thunk): Don't put function and thunk in same one_only
	section if __CYGWIN__ or __MINGW32__.

From-SVN: r80524